# bank_of_dad

./: Cargo.toml  LICENSE
src/: appstate.rs  db.rs  handlers.rs  lib.rs  main.rs  model.rs
src/handlers/: child.rs  path_not_found.rs  record_transaction.rs  websocket.rs
src/middleware/: request_tracing.rs
src/model/: amount.rs  error.rs  transaction.rs  websocket_msg.rs
tests/: e2e_test.rs  notifications_e2e_test.rs
