[package]
name = "bank_of_dad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "headers"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"
headers = "0.3.8"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.17"
mime = "0.3.17"
nanoid = "0.4.0"
regex = "1.9.6"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.20.1"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
